tests/NormalTests/paczka1/fuzzy1/28098623.err
Error in line 4: cCvktG S331 12,60
Error in line 8: A503 A621 262,3
Error in line 10: YdqEvFhJXYQ A977 26,6
Error in line 12: cCvktG S331 143,7
Error in line 28: b2Nk21R7R3 A621 62,3
Error in line 25: A503 A977 93,1
Error in line 32: A503 A503 95,3
Error in line 38: b2Nk21R7R3 A621 74,8
Error in line 40: YdqEvFhJXYQ AQ77 44,7
